# VirtualSoC

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/audio/: audio_out.cpp  audio_out.h
src/bus/: tlm_bus.cpp  tlm_bus.h
src/cpu/: csr.cpp  csr.h  decode.cpp  decode.h  execute.cpp  execute.h  iss.cpp  iss.h  mmu.cpp  mmu.h  rv32_defs.h  rv32a.cpp  rv32a.h  rv32m.cpp  rv32m.h  trap.cpp  trap.h
src/debug/: gdb_server.cpp  gdb_server.h
src/dma/: dma_engine.cpp  dma_engine.h
src/io/: gpio.cpp  gpio.h  spi.cpp  spi.h  timer.cpp  timer.h  uart.cpp  uart.h
src/irq/: clint.cpp  clint.h  plic.cpp  plic.h
src/mem/: bootrom.cpp  bootrom.h  memory.cpp  memory.h
src/platform/: gamingcpu_vp.cpp  gamingcpu_vp.h  platform_config.h
src/sd/: sd_card_model.cpp  sd_card_model.h  sd_ctrl.cpp  sd_ctrl.h
src/util/: elf_loader.cpp  elf_loader.h  logging.cpp  logging.h
src/video/: fb_ctrl.cpp  fb_ctrl.h  palette.cpp  palette.h
